--- a/src/components/TodoListItem.scss
+++ b/src/components/TodoListItem.scss
@@ -22,7 +22,7 @@
     // 체크되었을 때 보여줄 스타일
     &.checked {
       svg {
-        color: #22b8cf;
+        color: #ed5a3d;
       }
       .text {
         color: #adb5bd;
