--- a/src/components/TodoTemplate.scss
+++ b/src/components/TodoTemplate.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
 
   .app-title {
-    background: #22b8cf;
+    background: #ed5a3d;
     color: white;
     height: 4rem;
     font-size: 1.5rem;
